--- a/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
@@ -13,7 +13,7 @@
     <div class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">Application</a>
+                <a href="/" class="navbar-brand">HaikuRatingSystem</a>
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -25,8 +25,7 @@
                     <li>
                         <a href="/">Home</a>
                     </li>
-                </ul>
-                <div ng-include="'views/partials/identity/login.html'"></div>
+                </ul>f
             </div>
         </div>
     </div>
@@ -34,8 +33,6 @@
     </div>
     <hr />
     <footer class="text-center" ng-cloak>
-        Copyright:<strong> <a href="http://telerikacademy.com/" target="_blank">Telerik Academy 2015</a></strong>
-        <br />
         Powered by:<strong> <a href="http://angularjs.org/" target="_blank">AngularJS</a> and <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a></strong>
     </footer>
     <hr />
@@ -50,12 +47,12 @@
     <script src="js/common/notifier.js"></script>
     <script src="js/common/data.js"></script>
     <script src="js/home/home-controller.js"></script>
-    <script src="js/home/some-service.js"></script>
+    <script src="js/services/haikus-service.js"></script>
+    <script src="js/services/users-service.js"></script>
     <script src="js/home/some-directive.js"></script>
     <script src="js/identity/auth.js"></script>
     <script src="js/identity/authorization.js"></script>
     <script src="js/identity/identity.js"></script>
-    <script src="js/identity/login-controller.js"></script>
     <script src="js/identity/register-controller.js"></script>
 </body>
 </html>
