Added haikus and users directives

--- a/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
@@ -49,7 +49,8 @@
     <script src="js/home/home-controller.js"></script>
     <script src="js/services/haikus-service.js"></script>
     <script src="js/services/users-service.js"></script>
-    <script src="js/home/some-directive.js"></script>
+    <script src="js/users/all-users-directive.js"></script>
+    <script src="js/haikus/all-haikus-directive.js"></script>
     <script src="js/identity/auth.js"></script>
     <script src="js/identity/authorization.js"></script>
     <script src="js/identity/identity.js"></script>
