Added haikus page with paging and filtering

--- a/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
@@ -25,6 +25,9 @@
                     <li>
                         <a href="/">Home</a>
                     </li>
+                    <li>
+                        <a href="/haikus">Haikus</a>
+                    </li>
                 </ul>f
             </div>
         </div>
@@ -51,6 +54,7 @@
     <script src="js/services/users-service.js"></script>
     <script src="js/users/all-users-directive.js"></script>
     <script src="js/haikus/all-haikus-directive.js"></script>
+    <script src="js/haikus/haikus-controller.js"></script>
     <script src="js/identity/auth.js"></script>
     <script src="js/identity/authorization.js"></script>
     <script src="js/identity/identity.js"></script>
