--- a/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
@@ -32,6 +32,11 @@
                         <a href="/users">Users</a>
                     </li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/register">Register</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -52,15 +57,19 @@
     <script src="js/app.js"></script>
     <script src="js/common/notifier.js"></script>
     <script src="js/common/data.js"></script>
+
     <script src="js/home/home-controller.js"></script>
+
     <script src="js/services/haikus-service.js"></script>
     <script src="js/services/users-service.js"></script>
     <script src="js/users/all-users-directive.js"></script>
     <script src="js/users/users-controller.js"></script>
     <script src="js/users/user-viewmodel.js"></script>
+
     <script src="js/haikus/all-haikus-directive.js"></script>
     <script src="js/haikus/haikus-controller.js"></script>
-    <script src="js/identity/auth.js"></script>
+
+    <script src="js/identity/auth-service.js"></script>
     <script src="js/identity/authorization.js"></script>
     <script src="js/identity/identity.js"></script>
     <script src="js/identity/register-controller.js"></script>
