Implemented edit, rate, delete haiku. Delete all haikus and user account. Haikus details implemented.

--- a/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
@@ -68,6 +68,7 @@
 
     <script src="js/haikus/all-haikus-directive.js"></script>
     <script src="js/haikus/haikus-controller.js"></script>
+    <script src="js/haikus/haiku-details-controller.js"></script>
     <script src="js/haikus/publishHaikus-controller.js"></script>
 
     <script src="js/identity/auth-service.js"></script>
