--- a/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/index.html
@@ -31,6 +31,9 @@
                     <li>
                         <a href="/users">Users</a>
                     </li>
+                    <li>
+                        <a href="/reported">Reported</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -64,12 +67,13 @@
     <script src="js/services/users-service.js"></script>
     <script src="js/users/all-users-directive.js"></script>
     <script src="js/users/users-controller.js"></script>
-    <script src="js/users/user-viewmodel.js"></script>
+    <script src="js/users/user-details-controller.js"></script>
 
     <script src="js/haikus/all-haikus-directive.js"></script>
     <script src="js/haikus/haikus-controller.js"></script>
     <script src="js/haikus/haiku-details-controller.js"></script>
-    <script src="js/haikus/publishHaikus-controller.js"></script>
+    <script src="js/haikus/haiku-publish-controller.js"></script>
+    <script src="js/haikus/haikus-reported-controller.js"></script>
 
     <script src="js/identity/auth-service.js"></script>
     <script src="js/identity/authorization.js"></script>
